# motivational-quote

./: .env.sample  README.md  monday_quote.py  motivational_quote.py  pyproject.toml
